Update contact email address in index.html

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </section>
             <section class="section" id="contact">
                 <h2>Contact</h2>
-                <p>You can reach me at: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+                <p>You can reach me at: <a href="mailto:geta.inotiv@gmail.com">geta.inotiv@gmail.com</a></p>
             </section>
         </main>
         <script>
