Update index.html in root and src for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
             <section class="section" id="work">
                 <h2>Work Experience</h2>
                 <ul>
-                    <li><strong>Computational Scientist</strong>, Inotiv (2023–Present): ML models for chemical toxicity, PBPK modeling, and data analysis.</li>
-                    <li><strong>Postdoctoral Participant</strong>, US EPA (2020–2022): ML pipelines for emissions and VOC analysis.</li>
-                    <li><strong>Graduate Research Assistant</strong>, UNC Greensboro (2014–2018): Nano-theranostics and cancer research.</li>
+                    <li><strong>Computational Scientist</strong>, Inotiv (2023-Present): ML models for chemical toxicity, PBPK modeling, and data analysis.</li>
+                    <li><strong>Postdoctoral Participant</strong>, US EPA (2020-2022): ML pipelines for emissions and VOC analysis.</li>
+                    <li><strong>Graduate Research Assistant</strong>, UNC Greensboro (2014-2018): Nano-theranostics and cancer research.</li>
                 </ul>
             </section>
             <section class="section" id="teaching">
